# my-health-assistant

./: .gitignore  README.md  readme.txt  workflow.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py  state.py
backend/app/agents/: diagnosis_agent.py  info_agent.py  screening_agent.py  search_agent.py
backend/app/api/routes/: consultation.py  hospital.py
backend/app/graphs/: consultation_graph.py
backend/app/middleware/: auth.py
backend/app/models/: schemas.py
backend/app/services/: hira_api.py  naver_maps.py  pdf_generator.py  rag_retriever.py
backend/scripts/: generate_embeddings.py  ingest_base.py  ingest_kormedmcqa.py  ingest_medqa.py
backend/supabase/migrations/: 001_initial_schema.sql  002_pgvector_embeddings.sql  003_medical_knowledge.sql
docs/: api-integration-guide.md  architecture-decision.md  dependency-analysis-backend.md  dependency-analysis-frontend.md  health-assistant-features.md  health-assistant-prd.md  health-consultation-journey-map.md  health-consultation-screen-design.md  prompts.md  rag-data.md  rag-implementation.md  summary.md  techstack.md
frontend/: .env.local.example  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/(consultation)/: layout.tsx
frontend/components/chat/: ChatBubble.tsx  QuickReply.tsx  SeveritySlider.tsx  TypingIndicator.tsx
frontend/components/hospital/: HospitalCard.tsx
frontend/components/layout/: ConsultationLayout.tsx
frontend/components/maps/: MiniMap.tsx  NaverMapEmbed.tsx
(+31 files in other folders)
